# nonebot-plugin-wordle

./: .gitignore  README.md  pyproject.toml
nonebot_plugin_wordle/: __init__.py  data_source.py  utils.py
