[tool.poetry]
name = "nonebot_plugin_wordle"
version = "0.4.5"
description = "Nonebot2 wordle猜单词插件"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-wordle"
repository = "https://github.com/noneplugin/nonebot-plugin-wordle"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.3.0"
nonebot-plugin-alconna = ">=0.45.1,<1.0.0"
nonebot-plugin-uninfo = ">=0.4.0,<1.0.0"
pillow = "^10.0.0"
pyspellchecker = "^0.8.0"

[tool.poetry.group.dev.dependencies]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901", "UP037"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
